tests/negative/undefined_variable.xs
-- EXPECT_ERROR: T0002
let x = does_not_exist
